syntax = 'proto3';
package profile;
option go_package = "./pkg/profilepb";
message Date {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
  int32 hour = 4;
  int32 minute = 5;
}
message Profile {

  string name = 1;
  string email = 2;
  string birthdate = 3;
  string phone = 4;
  string user_id = 5;
  string gender = 6;


}
message ClientCreateProfileRequest {
  string user_id = 5;
  string name = 1;
  string email = 2;
  string birthdate = 3;
  string phone = 4;
  string gender = 6;
}
message ClientCreateProfileResponse{
  string result = 1;
  int32 status = 2;

}
message ClientUpdateProfileRequest{
  string user_id = 5;
  string name = 1;
  string email = 2;
  string birthdate = 3;
  string phone = 4;
  string gender = 6;
}
message ClientUpdateProfileResponse{
  string result = 1;
  int32 status = 2;
}
message ClientGetProfileRequest {
  string user_id = 1;
}
message ClientGetProfileResponse {
  string result = 1;
  int32 status = 3;
  Profile profile = 2;
}
message TherapistCreateProfileRequest {
  string name = 1;
  string email = 2;
  string birthdate = 3;
  string phone = 4;
  string prefer = 5;
  string user_id = 6;
  string gender = 7;

}
message TherapistCreateProfileResponse{
  string result = 1;
  int32 status = 3;
  string id = 2;

}
message TherapistUpdateProfileRequest {
  string name = 1;
  string email = 2;
  string birthdate = 3;
  string phone = 4;
  string prefer = 5;
  string user_id = 6;
  string gender = 7;

}
message TherapistUpdateProfileResponse{
  string result = 1;
  int32 status = 3;
  string id = 2;

}
message TherapistGetProfileRequest {
  string id = 1;
}
message TherapistGetProfileResponse {
  int32 status = 3;
  string result = 1;
  Profile profile = 2;
}

message TherapistGetFreeTimeRequest{
  string id = 1;
}
message TherapistGetFreeTimeResponse{
  int32 status = 3;
  repeated FreeTime free_time = 2;
}
message TherapistSetFreeTimeRequest{
  string id = 1;
  repeated Date free_time = 2;
}
message TherapistSetFreeTimeResponse{
  int32 status = 2;
  string result = 1;
}
message Keyword{
  string key = 1;
  string value = 2;
}
message FreeTime{
   Date date = 1;

   string therapist_id = 2;
}
message GetFreeTimeRequest{
   Keyword keyword = 1;
}
message GetFreeTimeResponse{
  string result = 1;
  int32 status = 2;
  repeated FreeTime free_times = 3;
}
service ProfileService {
  rpc ClientCreateProfile(ClientCreateProfileRequest) returns (ClientCreateProfileResponse);
  rpc ClientGetProfile(ClientGetProfileRequest) returns (ClientGetProfileResponse);
  rpc TherapistCreateProfile(TherapistCreateProfileRequest) returns (TherapistCreateProfileResponse);
  rpc TherapistGetProfile(TherapistGetProfileRequest) returns (TherapistGetProfileResponse);
  rpc GetTherapistFreeTime(TherapistGetFreeTimeRequest) returns (TherapistGetFreeTimeResponse);
  rpc SetFreeTime(TherapistSetFreeTimeRequest) returns (TherapistSetFreeTimeResponse);
  rpc GetFreeTime(GetFreeTimeRequest) returns (GetFreeTimeResponse);
  rpc ClientUpdateProfile(ClientUpdateProfileRequest) returns (ClientUpdateProfileResponse);
  rpc TherapistUpdateProfile(TherapistUpdateProfileRequest) returns (TherapistUpdateProfileResponse);
}


//message ClientPhoneProofRequest{
//  string phone = 1;
//  string clientType = 2;
//}
//message ClientPhoneProofResponse{
//  int32 status = 1;
//}
//message ClientPhoneTokenRequest{
//  string phone = 1;
//  string clientType = 3;
//
//  string code = 2;
//}
//message ClientPhoneTokenResponse{
//  string result = 1;
//  string token = 2;
//}
//service AuthService {
//  rpc PhoneProof(ClientPhoneProofRequest) returns (ClientPhoneProofResponse) {}
//  rpc PhoneToken(ClientPhoneTokenRequest) returns (ClientPhoneTokenResponse) {}
//  rpc ValidateToken(ValidateRequest) returns (ValidateResponse) {}
//}
//message ValidateRequest { string token = 1; }
//
//message ValidateResponse {
//  int64 status = 1;
//  string error = 2;
//  int64 userId = 3;
//}